Added code to initialize a Scaper object
- The notebook now creates a Scaper object.
- The structure of my project folder has been changed to work with Scaper.
- Added the first basic bomb sound

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -168,52 +168,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scaper\n",
-      "  Downloading scaper-1.6.4-py2.py3-none-any.whl (31 kB)\n",
-      "Collecting sox==1.4.0\n",
-      "  Downloading sox-1.4.0-py2.py3-none-any.whl (39 kB)\n",
-      "Collecting pyloudnorm\n",
-      "  Downloading pyloudnorm-0.1.0-py3-none-any.whl (9.3 kB)\n",
-      "Collecting soundfile\n",
-      "  Downloading SoundFile-0.10.3.post1-py2.py3.cp26.cp27.cp32.cp33.cp34.cp35.cp36.pp27.pp32.pp33-none-win_amd64.whl (689 kB)\n",
+      "Requirement already satisfied: scaper in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (1.6.4)\n",
+      "Requirement already satisfied: sox==1.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.4.0)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.18.1)\n",
-      "Collecting jams>=0.3.2\n",
-      "  Downloading jams-0.3.4.tar.gz (51 kB)\n",
-      "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (1.4.1)\n",
-      "Requirement already satisfied: future>=0.16.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (0.18.2)\n",
-      "Requirement already satisfied: cffi>=1.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from soundfile->scaper) (1.14.0)\n",
+      "Requirement already satisfied: jams>=0.3.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.3.4)\n",
+      "Requirement already satisfied: soundfile in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.10.3.post1)\n",
+      "Requirement already satisfied: pyloudnorm in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.1.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (4.4.1)\n",
       "Requirement already satisfied: pandas in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.0.1)\n",
       "Requirement already satisfied: sortedcontainers>=2.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (2.1.0)\n",
-      "Requirement already satisfied: jsonschema>=3.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (3.2.0)\n",
       "Requirement already satisfied: six in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.14.0)\n",
-      "Requirement already satisfied: decorator in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (4.4.1)\n",
-      "Collecting mir_eval>=0.5\n",
-      "  Downloading mir_eval-0.6.tar.gz (87 kB)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from cffi>=1.0->soundfile->scaper) (2.19)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2.8.1)\n",
+      "Requirement already satisfied: mir-eval>=0.5 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (0.6)\n",
+      "Requirement already satisfied: jsonschema>=3.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (3.2.0)\n",
+      "Requirement already satisfied: cffi>=1.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from soundfile->scaper) (1.14.0)\n",
+      "Requirement already satisfied: future>=0.16.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (0.18.2)\n",
+      "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (1.4.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2019.3)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (45.2.0.post20200210)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (0.15.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2.8.1)\n",
       "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (1.5.0)\n",
       "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (19.3.0)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (0.15.7)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from cffi>=1.0->soundfile->scaper) (2.19)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema>=3.0.0->jams>=0.3.2->scaper) (2.2.0)\n",
-      "Building wheels for collected packages: jams, mir-eval\n",
-      "  Building wheel for jams (setup.py): started\n",
-      "  Building wheel for jams (setup.py): finished with status 'done'\n",
-      "  Created wheel for jams: filename=jams-0.3.4-py3-none-any.whl size=64928 sha256=289f29435598f7e0258e22e93cedc6f25bf9bb6991b1d2bdb2a0a0fbbaff64be\n",
-      "  Stored in directory: c:\\users\\kdgg\\appdata\\local\\pip\\cache\\wheels\\c9\\aa\\16\\ce72bc4caa58dfab819e3f46b3542f2bf90a83009f4ea07a48\n",
-      "  Building wheel for mir-eval (setup.py): started\n",
-      "  Building wheel for mir-eval (setup.py): finished with status 'done'\n",
-      "  Created wheel for mir-eval: filename=mir_eval-0.6-py3-none-any.whl size=96520 sha256=3813b4c8170bf90718b32aa7bd4352ab6fe9787d67cad917690f49754618b59d\n",
-      "  Stored in directory: c:\\users\\kdgg\\appdata\\local\\pip\\cache\\wheels\\08\\28\\2d\\006dbad29550bac8daf049ff34fa882655a7d3e77f3b67595e\n",
-      "Successfully built jams mir-eval\n",
-      "Installing collected packages: sox, pyloudnorm, soundfile, mir-eval, jams, scaper\n",
-      "Successfully installed jams-0.3.4 mir-eval-0.6 pyloudnorm-0.1.0 scaper-1.6.4 soundfile-0.10.3.post1 sox-1.4.0\n"
+      "Requirement already satisfied: Sox in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (1.4.0)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from Sox) (1.18.1)\n"
      ]
     }
    ],
    "source": [
-    "!pip install scaper"
+    "!pip install scaper\n",
+    "!pip install Sox"
    ]
   },
   {
@@ -226,22 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scaper\n",
-    "import os\n",
     "\n",
-    "path_to_audio = os.path.expanduser('~/audio')\n",
+    "path_to_audio = 'audio'\n",
     "\n",
     "soundscape_duration = 10.0\n",
     "seed = 123\n",
-    "foreground_folder = os.path.join(path_to_audio, 'foreground')\n",
-    "background_folder = os.path.join(path_to_audio, 'background')\n",
+    "foreground_folder = 'audio/foreground'\n",
+    "background_folder = 'audio/background'\n",
     "sc = scaper.Scaper(soundscape_duration, foreground_folder, background_folder)\n",
     "sc.ref_db = -20"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
