Added foreground initialization event
- Added the code to add a simple bomb foreground effect to the soundscape.
- Reorginized the project folder to support the new code.

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +270,31 @@
    "metadata": {},
    "source": [
     "Now to add a foreground event. I'm going to add a variable volume on this event so that when Scaper generates the soundscape it contains explosions of random different volumes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.add_event(label=('const', 'bomb'),\n",
+    "             source_file=('choose', []),\n",
+    "             source_time=('const', 0),\n",
+    "             event_time=('uniform', 0, 9),\n",
+    "             event_duration=('truncnorm', 3, 1, 0.5, 5),\n",
+    "             snr=('normal', 10, 3),\n",
+    "             pitch_shift=(None),\n",
+    "             time_stretch=(None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all that I need to do is generate my soundscape with the Scaper.generate() function. This will create my soundscape using the random elements I specified. It will also generate a JAMS (JSON Annotated Music Specification) and text file of the soundscape.  \n",
+    "\n",
+    "(Note: I used a static seed here, so each call to generate() will result in the same soundscape. Using a random seed instead would create a unique soundscape each time generate() is called.) "
    ]
   },
   {
