Added soundscape generation code
- Added the generation code after battling an error for hours.
- This version has audio generation disabled since it was causing the error.
- JAMS and text files are generated from this code instead of the audio itself.

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -172,24 +172,24 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scaper in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (1.6.4)\n",
-      "Requirement already satisfied: sox==1.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.4.0)\n",
       "Requirement already satisfied: pyloudnorm in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.1.0)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.18.1)\n",
       "Requirement already satisfied: jams>=0.3.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.3.4)\n",
+      "Requirement already satisfied: sox==1.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.4.0)\n",
       "Requirement already satisfied: soundfile in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.10.3.post1)\n",
       "Requirement already satisfied: future>=0.16.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (0.18.2)\n",
       "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (1.4.1)\n",
-      "Requirement already satisfied: sortedcontainers>=2.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (2.1.0)\n",
-      "Requirement already satisfied: six in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.14.0)\n",
       "Requirement already satisfied: mir-eval>=0.5 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (0.6)\n",
+      "Requirement already satisfied: sortedcontainers>=2.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (2.1.0)\n",
       "Requirement already satisfied: jsonschema>=3.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (3.2.0)\n",
+      "Requirement already satisfied: six in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.14.0)\n",
       "Requirement already satisfied: pandas in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.0.1)\n",
       "Requirement already satisfied: decorator in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (4.4.1)\n",
       "Requirement already satisfied: cffi>=1.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from soundfile->scaper) (1.14.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (19.3.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (0.15.7)\n",
-      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (1.5.0)\n",
       "Requirement already satisfied: setuptools in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (19.3.0)\n",
+      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (1.5.0)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (0.15.7)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2.8.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2019.3)\n",
       "Requirement already satisfied: pycparser in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from cffi>=1.0->soundfile->scaper) (2.19)\n",
@@ -214,9 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SoX could not be found!\n",
+      "\n",
+      "    If you do not have SoX, proceed here:\n",
+      "     - - - http://sox.sourceforge.net/ - - -\n",
+      "\n",
+      "    If you do (or think that you should) have SoX, double-check your\n",
+      "    path variables.\n",
+      "    \n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,15 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "sc.add_event(label=('const', 'bomb'),\n",
-    "             source_file=('choose', []),\n",
+    "             source_file=('const', 'audio/foreground/bomb/blast01.wav'),\n",
     "             source_time=('const', 0),\n",
     "             event_time=('uniform', 0, 9),\n",
-    "             event_duration=('truncnorm', 3, 1, 0.5, 5),\n",
+    "             event_duration=('const', 2.17),\n",
     "             snr=('normal', 10, 3),\n",
     "             pitch_shift=(None),\n",
     "             time_stretch=(None))"
@@ -295,6 +309,43 @@
     "Now all that I need to do is generate my soundscape with the Scaper.generate() function. This will create my soundscape using the random elements I specified. It will also generate a JAMS (JSON Annotated Music Specification) and text file of the soundscape.  \n",
     "\n",
     "(Note: I used a static seed here, so each call to generate() will result in the same soundscape. Using a random seed instead would create a unique soundscape each time generate() is called.) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None,\n",
+       " <JAMS(file_metadata=<FileMetadata(...)>,\n",
+       "       annotations=[1 annotation],\n",
+       "       sandbox=<Sandbox(...)>)>,\n",
+       " [[3.266519545886467, 5.436519545886467, 'bomb'],\n",
+       "  [5.607773623843368, 7.777773623843368, 'bomb'],\n",
+       "  [6.771287262915162, 8.94128726291516, 'bomb']],\n",
+       " None)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "audiofile = 'soundscape.wav'\n",
+    "jamsfile = 'soundscape.jams'\n",
+    "txtfile = 'soundscape.txt'\n",
+    "sc.generate(audiofile, jamsfile,\n",
+    "            allow_repeated_label=True,\n",
+    "            allow_repeated_source=True,\n",
+    "            reverb=0.1,\n",
+    "            disable_sox_warnings=True,\n",
+    "            no_audio=True,\n",
+    "            txt_path=txtfile,\n",
+    "            disable_instantiation_warnings=True)"
    ]
   },
   {
