Finally got soundscape generation working
- I had to fix up the dependencies, SoX specifically, to get this to work.

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -162,46 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scaper in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (1.6.4)\n",
-      "Requirement already satisfied: pyloudnorm in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.1.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.18.1)\n",
-      "Requirement already satisfied: jams>=0.3.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.3.4)\n",
-      "Requirement already satisfied: sox==1.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (1.4.0)\n",
-      "Requirement already satisfied: soundfile in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from scaper) (0.10.3.post1)\n",
-      "Requirement already satisfied: future>=0.16.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (0.18.2)\n",
-      "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pyloudnorm->scaper) (1.4.1)\n",
-      "Requirement already satisfied: mir-eval>=0.5 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (0.6)\n",
-      "Requirement already satisfied: sortedcontainers>=2.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (2.1.0)\n",
-      "Requirement already satisfied: jsonschema>=3.0.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (3.2.0)\n",
-      "Requirement already satisfied: six in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.14.0)\n",
-      "Requirement already satisfied: pandas in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (1.0.1)\n",
-      "Requirement already satisfied: decorator in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jams>=0.3.2->scaper) (4.4.1)\n",
-      "Requirement already satisfied: cffi>=1.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from soundfile->scaper) (1.14.0)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (45.2.0.post20200210)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (19.3.0)\n",
-      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (1.5.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from jsonschema>=3.0.0->jams>=0.3.2->scaper) (0.15.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from pandas->jams>=0.3.2->scaper) (2019.3)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from cffi>=1.0->soundfile->scaper) (2.19)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema>=3.0.0->jams>=0.3.2->scaper) (2.2.0)\n",
-      "Requirement already satisfied: Sox in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (1.4.0)\n",
-      "Requirement already satisfied: numpy>=1.9.0 in c:\\users\\kdgg\\anaconda3\\lib\\site-packages (from Sox) (1.18.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install scaper\n",
-    "!pip install Sox"
+    "#!pip install scaper\n",
+    "#!pip install Sox\n",
+    "#!pip install FFmpeg\n",
+    "\n",
+    "#import sys\n",
+    "#!{sys.executable} -m pip install FFmpeg\n",
+    "#!{sys.executable} -m pip install SoX\n",
+    "#!{sys.executable} -m pip install scaper\n",
+    "\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} FFmpeg\n",
+    "!{sys.executable} -m pip install scaper\n",
+    "!{sys.executable} -m pip install playsound\n"
    ]
   },
   {
@@ -214,31 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SoX could not be found!\n",
-      "\n",
-      "    If you do not have SoX, proceed here:\n",
-      "     - - - http://sox.sourceforge.net/ - - -\n",
-      "\n",
-      "    If you do (or think that you should) have SoX, double-check your\n",
-      "    path variables.\n",
-      "    \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaper created successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scaper\n",
     "\n",
@@ -270,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +253,7 @@
     "             source_file=('const', 'audio/foreground/bomb/blast01.wav'),\n",
     "             source_time=('const', 0),\n",
     "             event_time=('uniform', 0, 9),\n",
-    "             event_duration=('const', 2.17),\n",
+    "             event_duration=('const', 2.2),\n",
     "             snr=('normal', 10, 3),\n",
     "             pitch_shift=(None),\n",
     "             time_stretch=(None))"
@@ -306,6 +263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Running the above code multyple times with generate a new bomb sound each time. I recommend running it 3-5 times.\n",
+    "\n",
     "Now all that I need to do is generate my soundscape with the Scaper.generate() function. This will create my soundscape using the random elements I specified. It will also generate a JAMS (JSON Annotated Music Specification) and text file of the soundscape.  \n",
     "\n",
     "(Note: I used a static seed here, so each call to generate() will result in the same soundscape. Using a random seed instead would create a unique soundscape each time generate() is called.) "
@@ -313,27 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None,\n",
-       " <JAMS(file_metadata=<FileMetadata(...)>,\n",
-       "       annotations=[1 annotation],\n",
-       "       sandbox=<Sandbox(...)>)>,\n",
-       " [[3.266519545886467, 5.436519545886467, 'bomb'],\n",
-       "  [5.607773623843368, 7.777773623843368, 'bomb'],\n",
-       "  [6.771287262915162, 8.94128726291516, 'bomb']],\n",
-       " None)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "audiofile = 'soundscape.wav'\n",
     "jamsfile = 'soundscape.jams'\n",
@@ -343,16 +284,14 @@
     "            allow_repeated_source=True,\n",
     "            reverb=0.1,\n",
     "            disable_sox_warnings=True,\n",
-    "            no_audio=True,\n",
+    "            no_audio=False,\n",
     "            txt_path=txtfile,\n",
     "            disable_instantiation_warnings=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
