Finished section on soundscape creation
- Added the ability to play the generated soundscape from within the notebook.
- Added a checkpoint to confirm soundscape playback as it can be very loud. I wouldn't want it to play without expressly being told to.

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "source": [
     "---------------------\n",
-    "## Turning Data Into Sound\n",
+    "## Creating a Soundscape\n",
     "\n",
     "This visual representation of the data is nice and all, but it feels dry and emotionless. I want to try to make the data more engaging and accessable by transforming it into something you can hear. \n",
     "\n",
@@ -292,6 +292,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "If everything worked like it should a text file containing a textual representation of the newly generated soundscape should have outputed. \n",
+    "\n",
+    "YAY! The first soundscape is complete! Find it in the project folder and give it a listen, or run the code snippit below to listen to it.\n",
+    "\n",
+    "## WARNING: VERY LOUD, PLAY THE RECORDING WITH CAUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from playsound import playsound\n",
+    "\n",
+    "while 1 == 1:\n",
+    "    userInput = input(\"Do you want to listen to the soundscape? WARNING: it can be loud. Enter 'y' for yes or 'n' for no: \")\n",
+    "    if userInput == 'y':\n",
+    "        playsound(audiofile)\n",
+    "        break\n",
+    "    elif userInput == 'n':\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
